# C_Based_ML

./: .dummy  .gitignore  CMakeLists.txt  DecisionTree.onnx  GaussianNB.onnx  LogisticRegression.onnx  bindings.cpp  pipeline.onnx  results.txt  test.py  tmp.ipynb
Data/Models/: DecisionTree.onnx  DecisionTree_m2c.c  LogisticRegression.onnx  LogisticRegression_m2c.c  RandomForest_classes.joblib  onnx_model_metrics.csv  preprocessor.joblib
Src/: evaluate.py  evaluate_c.py  process.py  test.py  train.py
Src/tmp/: main.c  main.rs  process.py  tmp.py
